--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@libsql/client": "^0.10.0",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.0",
     "@next/swc-win32-x64-msvc": "^14.2.6",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18"
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
